examples/test/testpolicy19409.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19409
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key45: value34
      key13: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value10
          key27: value24
      podSelector:
        matchLabels:
          key23: value11
          key13: value39
          key19: value9
